@@ -1,5 +1,6 @@
 
 5.2a3 -> 5.2a4:
+    - jbj: mire: teardown for platpat on exit needs to be done in order.
     - jbj: rpmwget: move to tools.
     - jbj: wire-up RPMTAG_FILEDIGESTALGO. wotta waste to pretend "compatible" ...
     - jbj: yaml: add build scriptlet tags for --yaml/--xml display.
